Updated about.html and added .gitignore file

--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
           <div class="about-hero-content">
             <div class="about-hero-text">
               <p>
-                Since 1995, Franciscan Catholic School has been nurturing young
+                Since 2025, Franciscan Catholic School has been nurturing young
                 minds and shaping future leaders through a holistic education
                 rooted in Catholic values. Founded by the Franciscan Sisters of
                 the Immaculate Conception, our school began with a vision to
@@ -221,7 +221,7 @@
             <div class="timeline-item">
               <div class="timeline-dot"></div>
               <div class="timeline-content">
-                <div class="timeline-year">2023</div>
+                <div class="timeline-year">2025</div>
                 <h3>Innovation & Growth</h3>
                 <p>
                   Launched enhanced STEAM curriculum and expanded after-school
@@ -454,7 +454,7 @@
 
             <div class="ethos-image">
               <img
-                src="assets/img/students-learning.jpg"
+                src="assets/img/children learning.jpg"
                 alt="Students engaged in learning"
               />
             </div>
