worked on the gallery

--- a/gallery.html
+++ b/gallery.html
@@ -825,6 +825,6 @@
     </footer>
     <!-- Footer section ends -->
 
-    <script src="assets/js/franciscan.js"></script>
+    <script src="assets/js/gallery.js"></script>
   </body>
 </html>
