worked on the portal landing page

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
           <span>Visit Our Website</span>
           <span>🌐</span>
         </a>
-        <a href="#" class="btn btn-portal">
-          <span>Student Portal</span>
+        <a href="portal.html" class="btn btn-portal">
+          <span>School Portal</span>
           <span>🚪</span>
         </a>
       </div>
