worked on the dashboard mobile toggle

--- a/teacher-dashboard.html
+++ b/teacher-dashboard.html
@@ -95,7 +95,7 @@
                         <p>Here's an overview of your classes and upcoming tasks</p>
                     </div>
                     <div class="welcome-image">
-                        <img src="assets/img/teacher-illustration.png" alt="Teacher Illustration">
+                        <img src="assets/img/team-3.jpg" alt="Teacher Illustration">
                     </div>
                 </div>
                 
