added my classes page on the side menu

--- a/teacher-dashboard.html
+++ b/teacher-dashboard.html
@@ -35,10 +35,10 @@
             <nav class="sidebar-nav">
                 <ul>
                     <li class="active">
-                        <a href="#dashboard"><i class="fas fa-th-large"></i> Dashboard</a>
+                        <a href="teacher-dashboard.html"><i class="fas fa-th-large"></i> Dashboard</a>
                     </li>
                     <li>
-                        <a href="#classes"><i class="fas fa-users"></i> My Classes</a>
+                        <a href="my-classes.html"><i class="fas fa-users"></i> My Classes</a>
                     </li>
                     <li>
                         <a href="#assignments"><i class="fas fa-book"></i> Assignments</a>
@@ -145,7 +145,7 @@
                     <div class="dashboard-card my-classes">
                         <div class="card-header">
                             <h2>My Classes</h2>
-                            <a href="#classes" class="view-all">View All</a>
+                            <a href="my-classes.html" class="view-all">View All</a>
                         </div>
                         <div class="card-content">
                             <ul class="class-list">
@@ -153,6 +153,12 @@
                                     <div class="class-info">
                                         <h4>Primary 5 - Mathematics</h4>
                                         <p>25 students</p>
+                                        <div class="class-progress">
+                                            <div class="progress-bar">
+                                                <div class="progress" style="width: 75%"></div>
+                                            </div>
+                                            <span>75% through curriculum</span>
+                                        </div>
                                     </div>
                                     <div class="class-actions">
                                         <a href="#" class="btn-class-action"><i class="fas fa-clipboard-check"></i> Attendance</a>
@@ -163,6 +169,12 @@
                                     <div class="class-info">
                                         <h4>Primary 6 - Mathematics</h4>
                                         <p>22 students</p>
+                                        <div class="class-progress">
+                                            <div class="progress-bar">
+                                                <div class="progress" style="width: 60%"></div>
+                                            </div>
+                                            <span>60% through curriculum</span>
+                                        </div>
                                     </div>
                                     <div class="class-actions">
                                         <a href="#" class="btn-class-action"><i class="fas fa-clipboard-check"></i> Attendance</a>
@@ -173,6 +185,12 @@
                                     <div class="class-info">
                                         <h4>Primary 4 - Mathematics</h4>
                                         <p>28 students</p>
+                                        <div class="class-progress">
+                                            <div class="progress-bar">
+                                                <div class="progress" style="width: 85%"></div>
+                                            </div>
+                                            <span>85% through curriculum</span>
+                                        </div>
                                     </div>
                                     <div class="class-actions">
                                         <a href="#" class="btn-class-action"><i class="fas fa-clipboard-check"></i> Attendance</a>
