made some changes to different pages

--- a/earlyyear.html
+++ b/earlyyear.html
@@ -36,7 +36,7 @@
               alt="Franciscan Catholic School Logo"
           /></a>
         </div>
-        <span>Franciscan Catholic School</span>
+        <span>Franciscan Catholic Nursery & Primary School</span>
       </div>
       <div class="nav-items">
         <a href="index.html">Home</a>
@@ -65,7 +65,6 @@
               </div>
             </div>
             <a href="primary.html">Primary</a>
-            <a href="curriculum.html">Curriculum</a>
           </div>
         </div>
         <a href="gallery.html">Gallery</a>
@@ -113,7 +112,7 @@
             </div>
 
             <p>
-              At Franciscan Catholic School, our Early Years Programme is based
+              At Franciscan Catholic Nursery & Primary School, our Early Years Programme is based
               on the UK's "Early Years Foundation Stage" curriculum. We provide
               an integrated approach to care and education which is play-based,
               following the interests of the children while nurturing their
@@ -828,7 +827,7 @@
                     alt="Franciscan Catholic School Logo"
                   />
                 </div>
-                <h3>Franciscan Catholic School</h3>
+                <h3>Franciscan Catholic Nursery & Primary School</h3>
               </div>
               <p>
                 Providing quality Catholic education since 1995. Building faith,
