--- a/creche.html
+++ b/creche.html
@@ -36,7 +36,7 @@
               alt="Franciscan Catholic School Logo"
           /></a>
         </div>
-        <span>Franciscan Catholic School</span>
+        <span>Franciscan Catholic Nursery & Primary School</span>
       </div>
       <div class="nav-items">
         <a href="index.html">Home</a>
@@ -64,7 +64,6 @@
               </div>
             </div>
             <a href="primary.html">Primary</a>
-            <a href="curriculum.html">Curriculum</a>
           </div>
         </div>
         <a href="gallery.html">Gallery</a>
@@ -124,7 +123,7 @@
                 crucial early stage of their development.
               </p>
               <p>
-                At Franciscan Catholic School, we understand that the first
+                At Franciscan Catholic Nursery & Primary School, we understand that the first
                 years of a child's life are formative. Our Creche programme is
                 designed to provide a loving, stimulating environment where
                 children can explore, learn, and grow in confidence while being
@@ -756,7 +755,7 @@
                   <div class="logo-circle">
                     <img src="assets/img/logo.jpg" alt="Franciscan Catholic School Logo" />
                   </div>
-                  <h3>Franciscan Catholic School</h3>
+                  <h3>Franciscan Catholic Nursery & Primary School</h3>
                 </div>
                 <p>Providing quality Catholic education since 1995. Building faith, knowledge, and character in young minds.</p>
                 <div class="social-links">
