--- a/welcome.html
+++ b/welcome.html
@@ -27,7 +27,7 @@
         <div class="logo-circle">
           <a href="index.html"><img src="assets/img/logo.jpg" alt="Franciscan Catholic School Logo" /></a>
         </div>
-        <span>Franciscan Catholic School</span>
+        <span>Franciscan Catholic Nursery & Primary School</span>
       </div>
       <div class="nav-items">
         <a href="index.html">Home</a>
@@ -49,7 +49,6 @@
               </div>
             </div>
             <a href="primary.html">Primary</a>
-            <a href="curriculum.html">Curriculum</a>
           </div>
         </div>
         <a href="gallery.html">Gallery</a>
@@ -116,14 +115,14 @@
                 <div class="welcome-text">
                   <p class="cursive-intro">Dear Parents and Guardians,</p>
                   <p>
-                    Welcome to Franciscan Catholic School, where every child's potential
+                    Welcome to Franciscan Catholic Nursery & Primary School, where every child's potential
                     is nurtured and celebrated. Our commitment to excellence in
                     education goes beyond academic achievement – we focus on
                     developing well-rounded individuals equipped with the skills
                     and values needed for success in today's world.
                   </p>
                   <p>
-                    At Franciscan Catholic School, we believe that every child is unique and
+                    At Franciscan Catholic Nursery & Primary School, we believe that every child is unique and
                     deserves an education that recognizes and develops their
                     individual talents. Our dedicated team of educators works
                     tirelessly to create an environment where learning is
@@ -236,7 +235,7 @@
                 <div class="logo-circle">
                   <img src="assets/img/logo.jpg" alt="Franciscan Catholic School Logo" />
                 </div>
-                <h3>Franciscan Catholic School</h3>
+                <h3>Franciscan Catholic Nursery & Primary School</h3>
               </div>
               <p>Providing quality Catholic education since 1995. Building faith, knowledge, and character in young minds.</p>
               <div class="social-links">
