--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -43,7 +43,7 @@
                         <a href="#reports"><i class="fas fa-chart-bar"></i> Reports</a>
                     </li>
                     <li>
-                        <a href="#settings"><i class="fas fa-cog"></i> Settings</a>
+                        <a href="settings.html"><i class="fas fa-cog"></i> Settings</a>
                     </li>
                 </ul>
             </div>
