--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -40,7 +40,7 @@
                         <a href="#exams"><i class="fas fa-file-alt"></i> Exams</a>
                     </li>
                     <li>
-                        <a href="#reports"><i class="fas fa-chart-bar"></i> Reports</a>
+                        <a href="reports.html"><i class="fas fa-chart-bar"></i> Reports</a>
                     </li>
                     <li>
                         <a href="settings.html"><i class="fas fa-cog"></i> Settings</a>
