worked on the subject page

--- a/exams.html
+++ b/exams.html
@@ -32,7 +32,7 @@
                         <a href="#classes"><i class="fas fa-school"></i> Classes</a>
                     </li>
                     <li>
-                        <a href="#subjects"><i class="fas fa-book"></i> Subjects</a>
+                        <a href="subjects.html"><i class="fas fa-book"></i> Subjects</a>
                     </li>
                     <li>
                         <a href="attendance.html"><i class="fas fa-calendar-check"></i> Attendance</a>
