--- a/reports.html
+++ b/reports.html
@@ -32,7 +32,7 @@
                         <a href="#classes"><i class="fas fa-school"></i> <span>Classes</span></a>
                     </li>
                     <li>
-                        <a href="#subjects"><i class="fas fa-book"></i> <span>Subjects</span></a>
+                        <a href="subjects.html"><i class="fas fa-book"></i> <span>Subjects</span></a>
                     </li>
                     <li>
                         <a href="attendance.html"><i class="fas fa-calendar-check"></i> <span>Attendance</span></a>
