worked on the classes page

--- a/reports.html
+++ b/reports.html
@@ -29,7 +29,7 @@
                         <a href="#students"><i class="fas fa-user-graduate"></i> <span>Students</span></a>
                     </li>
                     <li>
-                        <a href="#classes"><i class="fas fa-school"></i> <span>Classes</span></a>
+                        <a href="classes.html"><i class="fas fa-school"></i> <span>Classes</span></a>
                     </li>
                     <li>
                         <a href="subjects.html"><i class="fas fa-book"></i> <span>Subjects</span></a>
