--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -22,22 +22,22 @@
                         <a href="#dashboard"><i class="fas fa-tachometer-alt"></i> Dashboard</a>
                     </li>
                     <li>
-                        <a href="#teachers"><i class="fas fa-chalkboard-teacher"></i> Teachers</a>
+                        <a href="teachers.html"><i class="fas fa-chalkboard-teacher"></i> Teachers</a>
                     </li>
                     <li>
-                        <a href="#students"><i class="fas fa-user-graduate"></i> Students</a>
+                        <a href="students.html"><i class="fas fa-user-graduate"></i> Students</a>
                     </li>
                     <li>
-                        <a href="#classes"><i class="fas fa-school"></i> Classes</a>
+                        <a href="classes.html"><i class="fas fa-school"></i> Classes</a>
                     </li>
                     <li>
-                        <a href="#subjects"><i class="fas fa-book"></i> Subjects</a>
+                        <a href="subjects.html"><i class="fas fa-book"></i> Subjects</a>
                     </li>
                     <li>
-                        <a href="#attendance"><i class="fas fa-calendar-check"></i> Attendance</a>
+                        <a href="attendance.html"><i class="fas fa-calendar-check"></i> Attendance</a>
                     </li>
                     <li>
-                        <a href="#exams"><i class="fas fa-file-alt"></i> Exams</a>
+                        <a href="exams.html"><i class="fas fa-file-alt"></i> Exams</a>
                     </li>
                     <li>
                         <a href="reports.html"><i class="fas fa-chart-bar"></i> Reports</a>
