working on the teacher's dashboard side menu

--- a/teacher-dashboard.html
+++ b/teacher-dashboard.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/franciscan.css">
     <link rel="stylesheet" href="assets/css/dashboard.css">
+    
 </head>
 <body class="dashboard-body">
     <div class="dashboard-container">
@@ -41,28 +42,28 @@
                         <a href="my-classes.html"><i class="fas fa-users"></i> My Classes</a>
                     </li>
                     <li>
-                        <a href="#assignments"><i class="fas fa-book"></i> Assignments</a>
+                        <a href="assignments.html"><i class="fas fa-book"></i> Assignments</a>
                     </li>
                     <li>
-                        <a href="#e-learning"><i class="fas fa-laptop"></i> E-Learning</a>
+                        <a href="e-learning.html"><i class="fas fa-laptop"></i> E-Learning</a>
                     </li>
                     <li>
-                        <a href="#staff-appraisal"><i class="fas fa-chart-bar"></i> Staff Appraisal</a>
+                        <a href="staff-appraisal.html"><i class="fas fa-chart-bar"></i> Staff Appraisal</a>
                     </li>
                     <li>
-                        <a href="#leave-application"><i class="fas fa-calendar-alt"></i> Leave Application</a>
+                        <a href="leave-application.html"><i class="fas fa-calendar-alt"></i> Leave Application</a>
                     </li>
                     <li>
-                        <a href="#resources"><i class="fas fa-folder"></i> Resources</a>
+                        <a href="resources.html"><i class="fas fa-folder"></i> Resources</a>
                     </li>
                     <li>
-                        <a href="#messages"><i class="fas fa-envelope"></i> Messages</a>
+                        <a href="teacher-messages.html"><i class="fas fa-envelope"></i> Messages</a>
                     </li>
                 </ul>
             </nav>
             
             <div class="sidebar-footer">
-                <a href="#settings"><i class="fas fa-cog"></i> Settings</a>
+                <a href="teacher-settings.html"><i class="fas fa-cog"></i> Settings</a>
                 <a href="#" id="logout-btn"><i class="fas fa-sign-out-alt"></i> Logout</a>
             </div>
         </aside>
