--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/franciscan.css">
     <link rel="stylesheet" href="assets/css/dashboard.css">
+    <link rel="stylesheet" href="assets/css/student-dashboard.css">
 </head>
 <body class="dashboard-body">
     <div class="dashboard-container">
