added students assignment page

--- a/student-dashboard.html
+++ b/student-dashboard.html
@@ -39,7 +39,7 @@
                         <a href="#dashboard"><i class="fas fa-th-large"></i> Dashboard</a>
                     </li>
                     <li>
-                        <a href="#assignments"><i class="fas fa-book"></i> Assignments</a>
+                        <a href="student-assignments.html"><i class="fas fa-book"></i> Assignments</a>
                     </li>
                     <li>
                         <a href="#grades"><i class="fas fa-chart-line"></i> Grades</a>
