Update project files and add new assets

--- a/contact.html
+++ b/contact.html
@@ -132,6 +132,17 @@
           <p>Saturday & Sunday: Closed</p>
           <a href="#appointment" class="contact-link">Book Appointment</a>
         </div>
+
+        <div class="contact-info-card">
+          <div class="contact-icon">
+            <i class="fas fa-university"></i>
+          </div>
+          <h3>School Account</h3>
+          <p><strong>Account Name:</strong> Franciscan Sisters Project Account</p>
+          <p><strong>Account Number:</strong> 2006324090</p>
+          <p><strong>Bank:</strong> First Bank</p>
+          <a href="tel:+2349126605391" class="contact-link">Contact for Payment Queries</a>
+        </div>
       </div>
     </div>
   </section>
@@ -202,8 +213,8 @@
           <p>Interested in enrolling your child at Franciscan Catholic School? Download our admission form or schedule a
             visit to our campus.</p>
           <div class="admission-buttons">
-            <a href="assets/docs/admission-form.pdf" class="download-btn" download>
-              <i class="fas fa-download"></i> Download Admission Form
+            <a href="assets/docs/admission-form.html" class="download-btn" target="_blank">
+              <i class="fas fa-file-alt"></i> View Admission Form
             </a>
             <a href="#appointment" class="visit-btn">
               <i class="fas fa-calendar-check"></i> Schedule a Visit
