--- a/home.html
+++ b/home.html
@@ -306,7 +306,7 @@
       <div class="programmes-cta">
         <h3>Ready to join our school community?</h3>
         <p>Applications are now open for the upcoming academic year.</p>
-        <a href="contact.html" class="cta-button">Apply Now</a>
+        <a href="contact.html#admission" class="cta-button">Apply Now</a>
       </div>
     </div>
   </section>
