--- a/contact.html
+++ b/contact.html
@@ -580,6 +580,29 @@
 
   <script src="assets/js/franciscan.js"></script>
   <script src="assets/js/contactus.js"></script>
+  <script>
+    // Ensure hash navigation scrolls correctly on load and after navigation
+    (function() {
+      function scrollToHash() {
+        if (window.location.hash) {
+          var id = window.location.hash.substring(1);
+          var el = document.getElementById(id);
+          if (el) {
+            // Offset for fixed navbar
+            var navbar = document.querySelector('.navbar');
+            var offset = navbar ? navbar.offsetHeight + 10 : 0;
+            var top = el.getBoundingClientRect().top + window.pageYOffset - offset;
+            window.scrollTo({ top: top, behavior: 'smooth' });
+          }
+        }
+      }
+      // Run after page load and on hash changes
+      window.addEventListener('load', scrollToHash);
+      window.addEventListener('hashchange', scrollToHash);
+      // If coming from another page, run a tad later to allow layout to settle
+      setTimeout(scrollToHash, 150);
+    })();
+  </script>
 </body>
 
 </html>
