linked the book a tour button

--- a/home.html
+++ b/home.html
@@ -401,7 +401,7 @@
           environment firsthand.
         </p>
         <div class="cta-buttons">
-          <a href="contact.html" class="cta-button">Book a Tour</a>
+          <a href="contact.html#appointment" class="cta-button">Book a Tour</a>
           <a href="admissions.html" class="btn-secondary">Download Prospectus</a>
         </div>
       </div>
