Add comprehensive school prospectus page

--- a/home.html
+++ b/home.html
@@ -402,7 +402,7 @@
         </p>
         <div class="cta-buttons">
           <a href="contact.html#appointment" class="cta-button">Book a Tour</a>
-          <a href="admissions.html" class="btn-secondary">Download Prospectus</a>
+          <a href="prospectus.html" class="btn-secondary">Download Prospectus</a>
         </div>
       </div>
     </div>
