Add downloadable prospectus functionality

--- a/home.html
+++ b/home.html
@@ -402,7 +402,7 @@
         </p>
         <div class="cta-buttons">
           <a href="contact.html#appointment" class="cta-button">Book a Tour</a>
-          <a href="prospectus.html" class="btn-secondary">Download Prospectus</a>
+          <a href="assets/docs/franciscan-prospectus-2025.html" download="Franciscan-School-Prospectus-2025.html" class="btn-secondary" onclick="downloadHTMLProspectus(); return false;">Download Prospectus</a>
         </div>
       </div>
     </div>
@@ -584,6 +584,7 @@
   <!-- Footer section ends -->
 
   <script src="assets/js/franciscan.js"></script>
+  <script src="assets/js/download-prospectus.js"></script>
 </body>
 
 </html>
