--- a/home.html
+++ b/home.html
@@ -402,7 +402,7 @@
         </p>
         <div class="cta-buttons">
           <a href="contact.html#appointment" class="cta-button">Book a Tour</a>
-          <a href="assets/docs/franciscan-prospectus-2025.html" download="Franciscan-School-Prospectus-2025.html" class="btn-secondary" onclick="downloadHTMLProspectus(); return false;">Download Prospectus</a>
+          <a href="assets/docs/franciscan-prospectus-2025.txt" download="Franciscan-School-Prospectus-2025.txt" class="btn-secondary">📄 Download Prospectus</a>
         </div>
       </div>
     </div>
