--- a/creche.html
+++ b/creche.html
@@ -68,7 +68,7 @@
         </div>
         <a href="gallery.html">Gallery</a>
         <a href="contact.html">Contact</a>
-        <a href="portal.html" class="portal-btn">Student Portal</a>
+        <a href="portal.html" class="portal-btn">Portal</a>
       </div>
       <div class="hamburger">
         <span></span>
