Made changes to the space between the date and the logo for all the pages

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
       <span>Franciscan Catholic Nursery and Primary School</span>
     </div>
     <div class="nav-items">
-      <a href="index.html">Home</a>
+      <a href="home.html">Home</a>
       <div class="dropdown">
         <a href="about.html" class="dropdown-trigger active">About <i class="fas fa-chevron-down"></i></a>
         <div class="dropdown-content">
