--- a/corevalues.html
+++ b/corevalues.html
@@ -39,7 +39,7 @@
         <span>Franciscan Catholic Nursery & Primary School</span>
       </div>
       <div class="nav-items">
-        <a href="index.html">Home</a>
+        <a href="home.html">Home</a>
         <div class="dropdown">
           <a href="about.html" class="dropdown-trigger active"
             >About <i class="fas fa-chevron-down"></i
@@ -68,7 +68,7 @@
         </div>
         <a href="gallery.html">Gallery</a>
         <a href="contact.html">Contact</a>
-        <a href="portal.html" class="portal-btn">Student Portal</a>
+        <a href="portal.html" class="portal-btn">Portal</a>
       </div>
       <div class="hamburger">
         <span></span>
