--- a/creche.html
+++ b/creche.html
@@ -39,7 +39,7 @@
         <span>Franciscan Catholic Nursery & Primary School</span>
       </div>
       <div class="nav-items">
-        <a href="index.html">Home</a>
+        <a href="home.html">Home</a>
         <div class="dropdown">
           <a href="about.html" class="dropdown-trigger"
             >About <i class="fas fa-chevron-down"></i
