--- a/programme.html
+++ b/programme.html
@@ -27,10 +27,10 @@
         <div class="logo-circle">
           <a href="index.html"><img src="assets/img/logo.jpg" alt="Franciscan Catholic School Logo" /></a>
         </div>
-        <span>Franciscan Catholic School</span>
+        <span>Franciscan Catholic Nursery and Primary School</span>
       </div>
       <div class="nav-items">
-        <a href="index.html">Home</a>
+        <a href="home.html">Home</a>
         <div class="dropdown">
           <a href="about.html" class="dropdown-trigger">About <i class="fas fa-chevron-down"></i></a>
           <div class="dropdown-content">
@@ -54,7 +54,7 @@
         </div>
         <a href="gallery.html">Gallery</a>
         <a href="contact.html">Contact</a>
-        <a href="portal.html" class="portal-btn">Student Portal</a>
+        <a href="portal.html" class="portal-btn">Portal</a>
       </div>
       <div class="hamburger">
         <span></span>
@@ -500,9 +500,9 @@
               <div class="logo-circle">
                 <img src="assets/img/logo.jpg" alt="Franciscan Catholic School Logo" />
               </div>
-              <h3>Franciscan Catholic School</h3>
+              <h3>Franciscan Catholic Nursery and Primary School</h3>
             </div>
-            <p>Providing quality Catholic education since 1995. Building faith, knowledge, and character in young minds.</p>
+            <p>Quality Catholic Education Rooted in Franciscan Values Since 2025.</p>
             <div class="social-links">
               <a href="#"><i class="fab fa-facebook-f"></i></a>
               <a href="#"><i class="fab fa-twitter"></i></a>
