made some minor changes

--- a/home.html
+++ b/home.html
@@ -149,7 +149,7 @@
           <img src="assets/img/sister2.png" alt="School Principal" />
           <div class="image-caption">
             <p>Rev. Sr. Victoria Ogunwade</p>
-            <p class="caption-title">School Principal</p>
+            <p class="caption-title">School Administrator</p>
           </div>
         </div>
         <div class="welcome-text">
@@ -168,7 +168,7 @@
             that extends beyond the classroom. We invite you to explore what
             makes our school community special.
           </p>
-          <a href="welcome.html" class="btn-secondary">Read Principal's Welcome Note</a>
+          <a href="welcome.html" class="btn-secondary">Read Administrator's Welcome Note</a>
         </div>
       </div>
     </div>
