--- a/welcome.html
+++ b/welcome.html
@@ -83,7 +83,7 @@
     <section class="welcome-note-section">
       <div class="container">
         <div class="section-header">
-          <h2>Message from the Principal</h2>
+          <h2>Message from the Administrator</h2>
           <p class="subtitle">Guiding our school with vision and dedication</p>
           <div class="divider">
             <span class="divider-line"></span>
@@ -109,7 +109,7 @@
                   <img src="assets/img/sister2.png" alt="School Principal" />
                   <div class="image-caption">
                     <p>Rev. Sr. Victoria Ogunwade</p>
-                    <p class="caption-title">School Principal</p>
+                    <p class="caption-title">School Administrator</p>
                   </div>
                 </div>
                 <div class="welcome-text">
@@ -150,7 +150,7 @@
                       alt="Principal's Signature"
                       class="signature"
                     />
-                    <p><strong>Rev. Sr. Victoria Ogunwade</strong><br />School Principal</p>
+                    <p><strong>Rev. Sr. Victoria Ogunwade</strong><br />School Administrator</p>
                   </div>
                 </div>
               </div>
@@ -165,7 +165,7 @@
                 </div>
                 <div class="profile-details">
                   <h3>Rev. Sr. Victoria Ogunwade</h3>
-                  <h4>School Principal, Franciscan Catholic School</h4>
+                  <h4>School Administrator, Franciscan Catholic School</h4>
                   <div class="profile-bio">
                     <p>
                       Rev. Sr. Victoria Ogunwade is a dedicated educator and member of the Franciscan Sisters of the Immaculate Conception. 
