made some changes to the landing page and the home page

--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
       <span>Franciscan Catholic Nursery and Primary School</span>
     </div>
     <div class="nav-items">
-      <a href="index.html" class="active">Home</a>
+      <a href="home.html" class="active">Home</a>
       <div class="dropdown">
         <a href="about.html" class="dropdown-trigger">About <i class="fas fa-chevron-down"></i></a>
         <div class="dropdown-content">
@@ -149,7 +149,7 @@
           <img src="assets/img/sister2.png" alt="School Principal" />
           <div class="image-caption">
             <p>Rev. Sr. Victoria Ogunwade</p>
-            <p class="caption-title">School Administrator</p>
+            <p class="caption-title">Provincial Superior</p>
           </div>
         </div>
         <div class="welcome-text">
@@ -163,7 +163,7 @@
             academic success while instilling strong moral values.
           </p>
           <p>
-            Our dedicated teachers and staff are committed to recognizing each
+            Our dedicated staff are committed to recognizing each
             child's unique gifts and talents, fostering a love for learning
             that extends beyond the classroom. We invite you to explore what
             makes our school community special.
@@ -545,7 +545,7 @@
             <h4>Contact Information</h4>
             <ul>
               <li>
-                <i class="fas fa-map-marker-alt"></i> Unity Estate, Off Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
+                <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
               </li>
               <li>
                 <i class="fas fa-phone"></i> +234 912 660 5391
