--- a/corevalues.html
+++ b/corevalues.html
@@ -431,11 +431,11 @@
                     alt="Franciscan Catholic School Logo"
                   />
                 </div>
-                <h3>Franciscan Catholic Nursery & Primary School</h3>
+                <h3>Franciscan Catholic Nursery and Primary School</h3>
               </div>
               <p>
-                Providing quality Catholic education since 1995. Building faith,
-                knowledge, and character in young minds.
+                Quality Catholic Education Rooted in Franciscan Values Since
+                2025.
               </p>
               <div class="social-links">
                 <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -509,26 +509,24 @@
             </div>
 
             <div class="footer-section contact">
-              <h4>Contact Information</h4>
-              <ul>
-                <li>
-                  <i class="fas fa-map-marker-alt"></i> 15 Francis Avenue, Lekki
-                  Phase 1, Lagos, Nigeria
-                </li>
-                <li>
-                  <i class="fas fa-phone"></i> +234 803 456 7890, +234 802 345
-                  6789
-                </li>
-                <li>
-                  <i class="fas fa-envelope"></i>
-                  info@franciscancatholicschool.edu.ng
-                </li>
-                <li>
-                  <i class="fas fa-clock"></i> Monday - Friday: 7:30 AM - 3:30
-                  PM
-                </li>
-              </ul>
-            </div>
+            <h4>Contact Information</h4>
+            <ul>
+              <li>
+                <i class="fas fa-map-marker-alt"></i> First Unity Estate, Off Cooperative Villa, Badore, Ajah, Lagos, Nigeria.
+              </li>
+              <li>
+                <i class="fas fa-phone"></i> +234 912 660 5391
+              </li>
+              <li>
+                <i class="fas fa-envelope"></i>
+                info@franciscancatholicschool
+              </li>
+              <li>
+                <i class="fas fa-clock"></i> Monday - Friday: 7:30 AM - 3:30
+                PM
+              </li>
+            </ul>
+          </div>
           </div>
         </div>
       </div>
