made some changes to the homepage

--- a/home.html
+++ b/home.html
@@ -71,7 +71,7 @@
         <!-- Slide 1 -->
         <div class="slide active">
           <div class="slide-overlay"></div>
-          <img src="assets/img/class-1.jpg" alt="Students in classroom" />
+          <img src="assets/img/new1.jpeg" alt="Students in classroom" />
           <div class="slide-content">
             <h1>Faith-Based <span>Excellence</span></h1>
             <p>
@@ -85,7 +85,7 @@
         <!-- Slide 2 -->
         <div class="slide">
           <div class="slide-overlay"></div>
-          <img src="assets/img/class-2.jpg" alt="School facilities" />
+          <img src="assets/img/new2.jpeg" alt="School facilities" />
           <div class="slide-content">
             <h1>Holistic <span>Education</span></h1>
             <p>
@@ -99,7 +99,7 @@
         <!-- Slide 3 -->
         <div class="slide">
           <div class="slide-overlay"></div>
-          <img src="assets/img/blog-2.jpg" alt="Students in activities" />
+          <img src="assets/img/new3.jpeg" alt="Students in activities" />
           <div class="slide-content">
             <h1>Building <span>Future Leaders</span></h1>
             <p>
@@ -168,7 +168,7 @@
             that extends beyond the classroom. We invite you to explore what
             makes our school community special.
           </p>
-          <a href="welcome.html" class="btn-secondary">Read Administrator's Welcome Note</a>
+          <a href="welcome.html" class="btn-secondary">Provincial Superior's Welcome Note</a>
         </div>
       </div>
     </div>
@@ -271,13 +271,13 @@
             <a href="earlyyear.html" class="btn-programme">Learn More</a>
           </div>
           <div class="programme-image">
-            <img src="assets/img/about-1.jpg" alt="Early Years Students" />
+            <img src="assets/img/new4.png" alt="Early Years Students" />
           </div>
         </div>
 
         <div class="programme-card primary">
           <div class="programme-image">
-            <img src="assets/img/class-3.jpg" alt="Primary Students" />
+            <img src="assets/img/new5.png" alt="Primary Students" />
           </div>
           <div class="programme-content">
             <h3>Primary Education (Ages 5-11)</h3>
@@ -313,7 +313,7 @@
   <!-- Programmes section ends -->
 
   <!-- Testimonials section begins -->
-  <section class="testimonials-section">
+  <!-- <section class="testimonials-section">
     <div class="container">
       <div class="section-header">
         <h2>What Parents Say</h2>
@@ -388,7 +388,7 @@
         </button>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- Testimonials section ends -->
 
   <!-- Call to action section begins -->
